Closed Bug 1169640 Opened 11 years ago Closed 11 years ago

Unable to login on mediapart

Categories

(Firefox OS Graveyard :: Gaia::Browser, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox41 fixed, b2g-v2.2 unaffected, b2g-master verified)

RESOLVED FIXED
2.2 S14 (12june)
Tracking Status
firefox41 --- fixed
b2g-v2.2 --- unaffected
b2g-master --- verified

People

(Reporter: gerard-majax, Assigned: keeler)

References

Details

(Keywords: dogfood, regression)

Attachments

(3 files)

STR: - open https://www.mediapart.fr/ - tap on the third icon in the top starting from the left - enter credentials Expected: Pressing OK does something Actual: Pressing OK does nothing
For some reason I can login on non http version
Can we get a branch check?
Keywords: qawanted
I was not able to reliably reproduce this issue. At first I thought I was able to repro it because tapping on OK did nothing for me for multiple times, but after reflashing the device and retry again, now I am no longer able to repro. After tapping on the person icon on top left, I entered random characters as credentials, and tapped on OK. Currently I'm observing as soon as I tapped on OK the thin blue loading bar immediately starts animating and I was being brought to another page. Is it possible that this is a server issue? Because I wasn't doing anything different 20 minutes ago and now. Leaving qawanted for others to attempt. Also NI reporter to retest. Device: Flame (319MB KK full flashed) BuildID: 20150529010201 Gaia: e7d268074ee3c9eeb191c2205c0e35992fb3915d Gecko: f986e55c4e0b Gonk: 040bb1e9ac8a5b6dd756fdd696aa37a8868b5c67 Version: 41.0a1 (3.0 Master) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:41.0) Gecko/41.0 Firefox/41.0
Flags: needinfo?(lissyx+mozillians)
Flags: needinfo?(ktucker)
Keywords: qawanted
Flags: needinfo?(ktucker)
Just tested and I still 100% repro. ... I'll cross check on desktop.
Just tested and I still 100% repro. ... I'll cross check on desktop.
Flags: needinfo?(pcheng)
Flags: needinfo?(pcheng)
It works on desktop, but the https page gets me redirected to http and Firefox shows a warning about this. Maybe we don't handle this properly on B2G ?
Flags: needinfo?(pcheng)
Flags: needinfo?(lissyx+mozillians)
Pi Wei, can you make sure that you tested with *https* and not *http* ?
Hi Alexandre, Could you please provide me a test account of https://www.mediapart.fr/?
Flags: needinfo?(lissyx+mozillians)
(In reply to zouyi from comment #8) > Hi Alexandre, > Could you please provide me a test account of https://www.mediapart.fr/? No. You don't need one.
Flags: needinfo?(lissyx+mozillians)
As Pi Wei stated in comment 3, just trying with fake credentials should be enough to reproduce the issue.
Ah, I see. Thanks for the reminder. I now can reliably reproduce. The key step is to use https and not http. This issue occurs on Flame 3.0 master. Device: Flame (KK, full flashed, 319MB) BuildID: 20150601010203 Gaia: e6dc0f4c583407a4a52a66ce7cb11f058302a762 Gecko: f8d21278244b Gonk: 040bb1e9ac8a5b6dd756fdd696aa37a8868b5c67 Version: 41.0a1 (3.0 Master) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:41.0) Gecko/41.0 Firefox/41.0 ------- This issue does NOT occur on Flame 2.2. Upon tapping on OK, the device shows the attached warning overlay. And if I tap on Continue, I will be brought to another page. Device: Flame (KK, full flashed, 319MB) BuildID: 20150601002502 Gaia: b4582cc394e0919623263997c0cdb0b4751a1403 Gecko: 78d8b0a4303d Gonk: bd9cb3af2a0354577a6903917bc826489050b40d Version: 37.0 (2.2) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0
Flags: needinfo?(pcheng)
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
Keywords: qawanted
So this regressed between 2.2 and 3.0 :)
Working on getting the window.
QA Contact: pcheng
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
mozilla-inbound regression window: Last Working Device: Flame BuildID: 20150204103228 Gaia: 7b965db30278e46aaaa2a78555c187a041ab7864 Gecko: 0203370cd4db Version: 38.0a1 (3.0 Master) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:38.0) Gecko/38.0 Firefox/38.0 First Broken Device: Flame BuildID: 20150204122320 Gaia: b9607aef7debbde09a8db801ce4d021b8262e7f3 Gecko: de5837c6e80b Version: 38.0a1 (3.0 Master) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:38.0) Gecko/38.0 Firefox/38.0 Last Working Gaia First Broken Gecko - repro Gaia: 7b965db30278e46aaaa2a78555c187a041ab7864 Gecko: de5837c6e80b Last Working Gecko First Broken Gaia - no repro Gaia: b9607aef7debbde09a8db801ce4d021b8262e7f3 Gecko: 0203370cd4db Gecko pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=0203370cd4db&tochange=de5837c6e80b Caused by bug 832837.
Blocks: 832837
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
David, can you take a look at this please? This might have been caused by the work done for bug 832837.
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker) → needinfo?(dkeeler)
I'm looking into this.
Flags: needinfo?(dkeeler)
bug 1169640 - use nsIPrompt instead of nsIPromptService for insecure form submission Otherwise it doesn't work on B2G.
Attachment #8614893 - Flags: review?(mrbkap)
Assignee: nobody → dkeeler
Comment on attachment 8614893 [details] MozReview Request: bug 1169640 - use nsIPrompt instead of nsIPromptService for insecure form submission https://reviewboard.mozilla.org/r/10107/#review8881 Ship It!
Attachment #8614893 - Flags: review?(mrbkap) → review+
Thanks! Here's a try run to see if I broke anything: https://treeherder.mozilla.org/#/jobs?repo=try&revision=7bf9c8f3e619
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S14 (12june)
This bug has been verified as pass on latest Nightly build of Flame v3.0 and Nexus 5 v3.0 by the STR in Comment 0. Actual results: It will prompt "The information you have entered on this page will be sent over an insecure connection and could be read by a third party. Are you sure you want to send this information?" as expected. See attachment: verified_v3.0.mp4 Reproduce rate: 0/6 Device: Flame v3.0 build(Pass) Build ID 20150607160204 Gaia Revision 1d62b32408567f9f7cf1c71c1e5a0c6593be757b Gaia Date 2015-06-05 17:55:07 Gecko Revision https://hg.mozilla.org/mozilla-central/rev/7d4ab4a9febd Gecko Version 41.0a1 Device Name flame Firmware(Release) 4.4.2 Firmware(Incremental) eng.cltbld.20150607.193246 Firmware Date Sun Jun 7 19:32:58 EDT 2015 Bootloader L1TC000118D0 Device: Nexus 5 v3.0 build(Pass) Build ID 20150607160204 Gaia Revision 1d62b32408567f9f7cf1c71c1e5a0c6593be757b Gaia Date 2015-06-05 17:55:07 Gecko Revision https://hg.mozilla.org/mozilla-central/rev/7d4ab4a9febd Gecko Version 41.0a1 Device Name hammerhead Firmware(Release) 5.1 Firmware(Incremental) eng.cltbld.20150607.193647 Firmware Date Sun Jun 7 19:37:06 EDT 2015 Bootloader HHZ12f
QA Whiteboard: [QAnalyst-Triage+] → [QAnalyst-Triage+][MGSEI-Triage+]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: