bug 1169640 - use nsIPrompt instead of nsIPromptService for insecure form submission r=mrbkap

Otherwise it doesn't work on B2G.